# brainhack_school2026_airoh

./: .gitattributes  .gitignore  CLAUDE.md  README.md  environment.yml  invoke.yaml  pyproject.toml  requirements.txt  tasks.py
.claude/skills/init-airoh-project/: SKILL.md
.claude/skills/init-airoh-project/references/: airoh_api.md
.datalad/: config
analysis/: simulation.py
notebooks/: figure_simulation.ipynb  summary.ipynb
output_data/: CONTENT.md
source_data/: CONTENT.md
