[tool.setuptools.packages.find]
include = ["analysis*"]

[project]
name = "brainhack-2026-multimodal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "airoh",
    "invoke",
    "requests",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
